--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,30 @@ p {
     margin: 0 auto;
 }
 
+header {
+    margin-bottom: 20px;
+}
+
+.nav-bar{
+    margin: 20px 0 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+
+.nav-bar nav {
+    width: 100%;
+    margin: 0 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-bar nav a {
+    text-decoration: none;
+    font-size: 13px;
+    color: black;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
