--- a/css/index.css
+++ b/css/index.css
@@ -234,7 +234,7 @@ footer nav a {
     width: 370px;
     padding-bottom: 20px;
     border-bottom: 1px dashed black;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
 }
 
 .about-main .about-box .box-text {
@@ -248,4 +248,9 @@ footer nav a {
     font-size: 15px;
     background: white;
     cursor: pointer;
+}
+
+.about-bottom {
+    width: 95%;
+    margin: 0 auto 40px;
 }
