--- a/css/index.css
+++ b/css/index.css
@@ -266,7 +266,7 @@ footer nav a {
     margin: 30px 15px 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -275,3 +275,11 @@ footer nav a {
     margin-bottom: 30px;
 }
 
+.products-main .products-text button {
+    padding: 7px 25px;
+    margin-top: 20px;
+    border: 1px solid black;
+    font-size: 15px;
+    background: white;
+    cursor: pointer;
+}
